feat: launcher updater, more download options